[package]
name = "pior"
version = "0.1.1"
edition = "2021"
description = "Blazingly fast dead code detection for JS/TS projects"
license = "MIT"
repository = "https://github.com/ddoemonn/pior"
keywords = ["dead-code", "javascript", "typescript", "lint", "unused"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# JS/TS Parsing
swc_ecma_parser = "29"
swc_ecma_ast = "19"
swc_common = { version = "18", features = ["tty-emitter"] }
swc_atoms = "9"

# Parallelism
rayon = "1.10"

# File system
ignore = "0.4"
globset = "0.4"
walkdir = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Colors and output
owo-colors = "4.1"
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Misc
once_cell = "1.19"
regex = "1.10"
pathdiff = "0.2"

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.34", features = ["json"] }
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
